--- a/index.html
+++ b/index.html
@@ -1,5 +1,8 @@
 <!doctype html>
-<html lang="en" class="w-full h-full bg-white text-black/80 text-base/5">
+<html
+  lang="en"
+  class="w-full h-full bg-white text-black/80 text-base/5 dark:bg-zinc-700 dark:text-white"
+>
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
