style: use dark colors

--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!doctype html>
 <html
   lang="en"
-  class="w-full h-full bg-white text-black/80 text-base/5 dark:bg-zinc-700 dark:text-white"
+  class="w-full h-full text-white text-base/5 bg-zinc-700 accent-amber-600"
 >
   <head>
     <meta charset="UTF-8" />
