fix: adjust background color

--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!doctype html>
 <html
   lang="en"
-  class="w-full h-full text-white text-base/5 bg-zinc-700 accent-amber-600"
+  class="w-full h-full text-white text-base/5 bg-zinc-800 accent-amber-600"
 >
   <head>
     <meta charset="UTF-8" />
@@ -9,7 +9,7 @@
     <title>Collateral Documents Search</title>
   </head>
 
-  <body class="w-full p-2 pb-10 text-sm">
+  <body class="p-2 pb-10 w-full text-sm">
     <div id="app"></div>
     <script type="module" src="/src/main.js"></script>
   </body>
