fix: set html background in head to prevent flash of white when loading

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -4,6 +4,11 @@
   class="text-base/5 bg-zinc-800 accent-amber-600 w-full h-full text-white"
 >
   <head>
+    <style type="text/css">
+      html {
+        background: #222;
+      }
+    </style>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Collateral Documents Search</title>
