chore: run lint:fix

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -1,8 +1,5 @@
 <!doctype html>
-<html
-  lang="en"
-  class="text-base/5 bg-zinc-800 accent-amber-600 w-full h-full text-white"
->
+<html lang="en" class="text-base/5 accent-amber-600 w-full h-full text-white">
   <head>
     <style type="text/css">
       html {
@@ -14,7 +11,7 @@
     <title>Collateral Documents Search</title>
   </head>
 
-  <body class="w-full p-2 pb-10">
+  <body class="bg-zinc-800 w-full p-2 pb-10">
     <div id="app"></div>
     <script type="module" src="/src/main.js"></script>
   </body>
